--- a/app/roulette.component.html
+++ b/app/roulette.component.html
@@ -1,2 +1,12 @@
-<i class="fa fa-play nedle"></i>
-<div id="roulette"></div>
+<i (click)="startTimba()" class="fa fa-play nedle"></i>
+<div id="roulette">
+    <div class="countDown" style="    font-size: 24px;
+    top: 178px;
+    left: 74px;
+    opacity: 1;
+    color: white;" id="welcome">Bienvenidos a la 71mb4</div>
+
+    <div class="countDown" id="three">3</div>
+    <div class="countDown" id="two">2</div>
+    <div class="countDown" id="one">1</div>
+</div>
