--- a/app/home.component.html
+++ b/app/home.component.html
@@ -1,9 +1,9 @@
 
-
-	<div class="col-xs-4 col-xs-offset-4 text-center abcen1">
+<div class="row">
+	<div class="col-sm-4 col-sm-offset-4 text-center abcen1">
 		<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">71mb4</h1>
 		<div *ngIf="nav=='welcome'">
-			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Esta vez va en serio</h3>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Esta vez es personal!</h3>
 			<ul class="list-inline intro-social-buttons">
 				<li id="login" ><a (click)="nav='login'" href="#" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Entrar</span></a>
 				</li>
@@ -25,9 +25,23 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<button type="link" (click)="login()" class="btn btn-link">forgot password?</button>
+				<button type="link" (click)="nav='forgot'" class="btn btn-default">forgot password?</button>
 			</div>
 		</form>
+
+		<form *ngIf="nav=='forgot'" role="form">
+			<div class="form-group">
+				<div style="display:flex">
+					<input  type="text" [(ngModel)]="user.email" style="margin-right:15px" placeholder="email"
+						class="form-control" id="pwd" [ngModelOptions]="{standalone: true}">
+					<button type="submit" (click)="forgotPassword()" class="btn btn-primary">Send</button>
+				</div>
+			</div>
+			<div class="form-group">
+				<button type="link" (click)="nav='login'" class="btn btn-default">back</button>
+			</div>
+		</form>
+
 		<form *ngIf="nav=='signin'" role="form">
 			<div class="form-group">
 				<input type="email" [(ngModel)]="user.email" placeholder="Email" class="form-control" id="email" [ngModelOptions]="{standalone: true}">
@@ -44,3 +58,4 @@
 			</div>
 		</form>
 	</div>    
+</div>
