--- a/app/info.component.html
+++ b/app/info.component.html
@@ -8,9 +8,14 @@
 		<i class="fa fa-users" style="text-align: center;padding-top: 12px;padding-right: 5px;"></i> Players <div class="info-value">{{services.timba.players.length}}</div>
 	</div>
 	<div class="info-row">
-		<i class="fa fa-usd" style="text-align: center;padding-top: 12px;padding-right: 5px;"></i> Average <div class="info-value">$ {{services.getTotalAmount()/services.timba.players.length}}</div>
+		<i class="fa fa-usd" style="text-align: center;padding-top: 12px;padding-right: 5px;"></i> Average <div class="info-value">$ {{services.getAverageAmount()}}</div>
 	</div>
-	<div style="text-align:left;" >
-		<i class="fa fa-clock-o" style="text-align: center;padding-top: 12px;padding-right: 5px;"></i>Remaining time <div class="info-value"> {{services.timeCountDown}}</div>
+	<div *ngIf="!services.timba.winner" style="text-align:left;" >
+		<i  class="fa fa-clock-o" style="text-align: center;padding-top: 12px;padding-right: 5px;"></i>Remaining time <div class="info-value"> {{services.timeCountDown}}</div>
+
 	</div>
+		<div *ngIf="services.timba.winner" style="text-align:left;" >
+
+		<i  class="fa fa-trophy" style="text-align: center;padding-top: 12px;padding-right: 5px;"></i>Winner <div class="info-value"> {{services.timba.winner}}</div>
+		</div>
 </div>
