--- a/app/home.component.html
+++ b/app/home.component.html
@@ -26,8 +26,11 @@
 			</div>
 			<div class="form-group">
 				<button type="link" (click)="nav='forgot'" class="btn btn-default">forgot password?</button>
+				<button type="link" (click)="nav='signin'" class="btn btn-default">Sign in</button>
 			</div>
 		</form>
+
+		
 
 		<form *ngIf="nav=='forgot'" role="form">
 			<div class="form-group">
@@ -53,7 +56,7 @@
 				<div style="display:flex">
 					<input type="password" [(ngModel)]="user.password" style="margin-right:15px" placeholder="Repeat password" class="form-control"
 						id="pwd" [ngModelOptions]="{standalone: true}">
-					<button type="submit" (click)="login()" class="btn btn-primary">Sign in</button>
+					<button type="submit" (click)="signIn();nav='login';" class="btn btn-primary">Sign in</button>
 				</div>
 			</div>
 		</form>
