--- a/app/bet.component.css
+++ b/app/bet.component.css
@@ -3,18 +3,25 @@
   left:0;
   position:absolute;
   width:100%;
-  height:20%;
-  background:rgba(120,120,120,0.1);
-  filter:blur(8px);
-  z-index:-1;
+  height:73px;
+  background:rgba(120,120,120,0.051);
+  filter:blur(4px);
+  z-index:0;
 }
 
 .info-row{
+  height:74px;
   border-bottom: 1px solid rgba(200,200,200,0.3);
 }
 
 .info-value{
     display: inline; 
-    font-size: 25px;
+    font-size: 35px;
     font-weight: bold;
+}
+
+.info-title{
+  padding-left:5px;
+  width: 43%;
+    display: inline-table;
 }
