--- a/app/bet.component.html
+++ b/app/bet.component.html
@@ -2,18 +2,17 @@
 </div>
 <div style="z-index:2">
 	<div class="info-row" style="text-align: left;">
+		<div class="info-title">
 		<i class="fa fa-usd" style="text-align: left;padding-top: 12px;padding-right: 5px;"></i> Your bet
-		
-	</div>
-	<div class="info-row">
+		</div>
 		<div class="info-value">$ {{services.getPlayerAmount()}}</div>
 	</div>
 	<div style="display:flex">
-		<button (click)="setBet('SUBSTRACT')" class="btn btn-primary" style="width:50%">
-			<i class="fa fa-minus" style="text-align: center;padding-top: 12px;padding-right: 5px;"></i> $10
+		<button (click)="setBet('SUBSTRACT')" class="btn btn-primary" style="height:100%;width:50%">
+			<i class="fa fa-minus" style="text-align: center;padding-right: 5px;"></i> $10
 		</button>
-		<button (click)="setBet('ADD')" class="btn btn-primary" style="width:50%">
-			<i class="fa fa-plus" style="text-align: center;padding-top: 12px;padding-right: 5px;"></i> $10		 
+		<button (click)="setBet('ADD')" class="btn btn-primary" style="height:100%;width:50%">
+			<i class="fa fa-plus" style="text-align: center;padding-right: 5px;"></i> $10		 
 		</button>
 	</div>
 </div>
