--- a/app/info.component.css
+++ b/app/info.component.css
@@ -3,20 +3,26 @@
   left:0;
   position:absolute;
   width:100%;
-  height:30%;
-  background:rgba(120,120,120,0.1);
-  filter:blur(8px);
+  height:25%;
+  background:rgba(120,120,120,0.051);
+  filter:blur(4px);
 }
 
 .info-row{
   border-bottom: 1px solid rgba(200,200,200,0.3);
   text-align:left;
+  font-size:12px;
 }
 
 .info-value{
   text-align:middle;
     display: inline; 
-    font-size: 20px;
-    margin-left: 30px;
+    font-size: 16px;
     font-weight: bold;
+}
+
+.info-title{
+  padding-left:5px;
+  width: 43%;
+    display: inline-table;
 }
