--- a/app/home.component.html
+++ b/app/home.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-	<div class="col-xs-12 col-lg-4 col-lg-offset-4 text-center abcen1">
+	<div class="col-xs-12 col-lg-4 col-lg-offset-4 text-center" style="margin-top:150px">
 		<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">71mb4</h1>
 		<div *ngIf="nav=='welcome'">
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Esta vez es personal!</h3>
@@ -54,10 +54,16 @@
 			</div>
 			<div class="form-group">
 				<div style="display:flex">
-					<input type="password" [(ngModel)]="user.password" style="margin-right:15px" placeholder="Repeat password" class="form-control"
-						id="pwd" [ngModelOptions]="{standalone: true}">
-					<button type="submit" (click)="signIn();nav='login';" class="btn btn-primary">Sign in</button>
+					<input type="password" [(ngModel)]="repeatPassword" style="margin-right:15px" placeholder="Repeat password" class="form-control"
+						id="pwd2" [ngModelOptions]="{standalone: true}">
+					<button type="submit" (click)="signIn()" class="btn btn-primary">Sign in</button>
 				</div>
+			</div>
+			<div *ngIf="err" class="alert alert-danger">
+				{{ err.msg }}
+			</div>
+			<div class="form-group">
+				<button  (click)="nav='login'" class="btn btn-default">back</button>
 			</div>
 		</form>
 	</div>    
