--- a/css/general.css
+++ b/css/general.css
@@ -14,9 +14,9 @@ body, html {
 	overflow-x:hidden;
 }
 
-::-moz-selection{background:#1abc9c;color:white}
+::-moz-selection{background:#2c3230;color:white}
 
-::selection{background:#1abc9c;color:white}
+::selection{background:#2c3230;color:white}
 
 .abcen{position: absolute;bottom: 8%;}
 
