--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ body {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.72222;
-  color: #34495e;
+  color: #fafafa;
   background-color: #ffffff;
 }
 a {
