--- a/app/app.component.html
+++ b/app/app.component.html
@@ -75,8 +75,8 @@
 	</div>
 </div>
 
-<div *ngIf="services.timba.log.length == 0 && services.user.email" class="timba-modal">
-	<div class="modal-content">
+<div *ngIf="services.timba.log.length == 0 && services.user.email" class="timba-modal" style="width:30%">
+	<div class="modal-content" style="height:30%;background-color:rgba(255,0,0,0.7)">
 		<h3>Connection loss</h3>
 	
 		<div style="display:block;width:100%;margin-bottom:40px;">
